[package]
name = "monkeytype"
version = "0.1.0"
edition = "2021"

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail-rust", tag = "v0.1.9" }
base64 = "0.21"
celestia-rpc = "0.9.1"
celestia-types = "0.10.1"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
sha2 = "0.10"
chrono = "0.4"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.21.3"
